feat: template uid render
render works with a hashed template
dockerfile needed to be reworked because of a gpg signing error and file storage issue, so libreoffice is separated into its own layer.
